# counter

contract-v1/: Cargo.toml
contract-v2/: Cargo.toml
scripts/: deploy-counter-1.sh  get-deploy.sh  increment-counter-1-call.sh  increment-counter-1-ep.sh  query-deploy-state.sh  query-state.sh
tests/: Cargo.toml
